--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: "3.0"
 services:
   reconciliation-backend:
     build:
-      context: ./
-      dockerfile: .Dockerfile
+      context: .
+      dockerfile: Dockerfile
     depends_on:
       - postgres_db
 
@@ -12,8 +12,13 @@ services:
     image: postgres:14-alpine
     ports:
       - 5432:5432
+    restart: always
+    env_file:
+      - .env
     environment:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_DB=${DB_NAME}
       - POSTGRES_HOST=${DB_HOST}
+    volumes:
+      - ~/apps/postgres:/var/lib/postgresql/data
