--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,9 @@ jobs:
             
       - name: Install dependencies
         run: pip install -r requirements.txt
+
+      - name: Install Setuptools
+        run: pip install --upgrade setuptools
       
       - name: Run test
         run: python manage.py test
