--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,9 +34,10 @@ jobs:
 
       - name: Generate coverage report
         run: |
-              pip install pytest
+              pip install coverage
               pip install pytest-cov
-              pytest --cov=./ --cov-report=xml
+              coverage report -m 
+              coverage xml
       
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
