--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.8.1
+coverage==7.5.3
 Django==5.0.6
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
+gunicorn==22.0.0
 inflection==0.5.1
 packaging==24.1
 psycopg2==2.9.9
