SCRUM-149-fix-postgres-db-connection-for-github-ci fix: test.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,14 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+    env:
+      DB_NAME: test_db
+      DB_USER: django_user
+      DB_PASSWORD: testing321
+      DB_HOST: localhost
+      DB_PORT: 5432
+      DATABASE_URL: postgres://myuser:mypassword@127.0.0.1:5432/mydatabase
+      ENV: dev
 
     steps:
       - name: Checkout repository
