--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.3.2
 coverage==7.5.3
 Django==5.0.6
 django-cors-headers==4.3.1
+django-resized==1.0.2
 django-storages==1.14.3
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
@@ -20,6 +21,7 @@ gunicorn==22.0.0
 idna==3.7
 inflection==0.5.1
 packaging==24.1
+pillow==10.4.0
 proto-plus==1.24.0
 protobuf==5.27.2
 psycopg2==2.9.9
