--- a/requirements.txt
+++ b/requirements.txt
@@ -38,3 +38,11 @@ sqlparse==0.5.0
 typing_extensions==4.12.1
 uritemplate==4.1.1
 urllib3==2.2.2
+cryptography~=43.0.0
+cffi~=1.17.0
+pip~=24.0
+wheel~=0.43.0
+setuptools~=69.2.0
+paramiko~=3.4.1
+Faker~=27.0.0
+pydantic~=2.8.2
